# C-algorithm

./: CMakeLists.txt  README.md  run-build.bat
src/: sort.c
test/: runtest.c
列印Print/: .c
列印一些東西PrintSomeThings/: .c
數學Math/: .c  QE.c
數學式解析MathematicalAnalysis/: .c
